binding fetching data to propertList

--- a/REO.xcodeproj/xcshareddata/xcschemes/NetworkTests.xcscheme
+++ b/REO.xcodeproj/xcshareddata/xcschemes/NetworkTests.xcscheme
@@ -22,6 +22,16 @@
                ReferencedContainer = "container:REO.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E57F4AD527468B4000F25ACB"
+               BuildableName = "RepositoryTests.xctest"
+               BlueprintName = "RepositoryTests"
+               ReferencedContainer = "container:REO.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
