--- a/REO.xcodeproj/xcshareddata/xcschemes/REO.xcscheme
+++ b/REO.xcodeproj/xcshareddata/xcschemes/REO.xcscheme
@@ -26,7 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      enableAddressSanitizer = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -45,6 +46,16 @@
                BlueprintIdentifier = "E57F4AD527468B4000F25ACB"
                BuildableName = "RepositoryTests.xctest"
                BlueprintName = "RepositoryTests"
+               ReferencedContainer = "container:REO.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E55810B427479011004B8936"
+               BuildableName = "REOTests.xctest"
+               BlueprintName = "REOTests"
                ReferencedContainer = "container:REO.xcodeproj">
             </BuildableReference>
          </TestableReference>
