--- a/REO.xcodeproj/xcshareddata/xcschemes/NetworkLayerTests.xcscheme
+++ b/REO.xcodeproj/xcshareddata/xcschemes/NetworkLayerTests.xcscheme
@@ -16,19 +16,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E57F4A942746774000F25ACB"
-               BuildableName = "NetworkTests.xctest"
-               BlueprintName = "NetworkTests"
-               ReferencedContainer = "container:REO.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E57F4AD527468B4000F25ACB"
-               BuildableName = "RepositoryTests.xctest"
-               BlueprintName = "RepositoryTests"
+               BlueprintIdentifier = "293EA57927524A59003BC0E0"
+               BuildableName = "NetworkLayerTests.xctest"
+               BlueprintName = "NetworkLayerTests"
                ReferencedContainer = "container:REO.xcodeproj">
             </BuildableReference>
          </TestableReference>
